--- a/assets/sass/partials/_variables.scss
+++ b/assets/sass/partials/_variables.scss
@@ -1,8 +1,12 @@
 $color:  #999;
+$body-copy: #8e8e8e;
+$header-copy: #f2d476;
+$btn-copy: #873116;
 
 //font sizes
 $font-regular: 12px;
 $font-large: 14px;
+$font-small: 10px;
 
 //fonts
 $font-family-regular: Helvetica, Arial, "sans-serif";
