search works, responsive (bit messy at mobile level)

--- a/assets/sass/partials/_variables.scss
+++ b/assets/sass/partials/_variables.scss
@@ -10,4 +10,7 @@ $font-small: 10px;
 
 //fonts
 $font-family-regular: Helvetica, Arial, "sans-serif";
-$default_font_style: normal
+$default_font_style: normal;
+
+//forms
+$input-border-color: #494949;
