--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -73,22 +73,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   background: url('/ea/assets/images/sprites/general-s11a649fb0c.png') no-repeat;
 }
 
-/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-nav-left {
   background-position: 0 0;
 }
 
-/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-nav-right {
   background-position: 0 -99px;
 }
 
-/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-page-bottom-corner {
   background-position: 0 -198px;
 }
 
-/* line 60, /Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
+/* line 60, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/sprites/_base.scss */
 .general-page-gutter-top {
   background-position: 0 -222px;
 }
@@ -103,27 +103,32 @@ body, p, span, div {
   font: normal bold 14px Helvetica, Arial, "sans-serif";
   color: #f2d476;
 }
+/* line 26, ../sass/screen.scss */
+.section-title > span {
+  font-style: italic;
+  color: #f2d476;
+}
 
-/* line 27, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 .nav-item {
   height: 33px;
   float: left;
 }
-/* line 30, ../sass/screen.scss */
+/* line 34, ../sass/screen.scss */
 .nav-item.nav-item-left {
   width: 152px;
 }
-/* line 33, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 .nav-item.nav-item-right {
   width: 18px;
 }
 
-/* line 38, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 li {
   float: left;
 }
 
-/* line 42, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 .container-wrapper {
   background-color: #000;
   min-width: 1000;
@@ -134,12 +139,12 @@ li {
   background-position: top center;
 }
 
-/* line 50, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 .content-wrapper {
   overflow: hidden;
 }
 
-/* line 54, ../sass/screen.scss */
+/* line 58, ../sass/screen.scss */
 .logo {
   min-width: 800px;
   min-height: 600px;
@@ -152,22 +157,22 @@ li {
   z-index: 0;
 }
 
-/* line 63, ../sass/screen.scss */
+/* line 67, ../sass/screen.scss */
 .container {
   padding-top: 163px;
   position: relative;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 72, ../sass/screen.scss */
 .textured {
   background-image: url("../images/content-texture.jpg");
   background-repeat: repeat-x;
   background-position: top left;
-  background-color: #000;
+  background-color: #121214;
   height: 365px;
 }
 
-/* line 74, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 .header-texture {
   background-image: url("../images/header-texture.jpg");
   background-repeat: repeat-x;
@@ -182,32 +187,43 @@ li {
   border-top-right-radius: 10px;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 .navigation > .span11 {
   margin-left: 30px;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
+.nav-listitem {
+  max-width: 33%;
+}
+
+/* line 96, ../sass/screen.scss */
+.footer-container {
+  padding-top: 0px;
+}
+
+/* line 100, ../sass/screen.scss */
 .gutter > .gutter-top_corner {
   width: 9px;
   height: 36px;
 }
-/* line 94, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 .gutter.gutter-left {
   float: left;
+  margin-left: -20px;
 }
-/* line 97, ../sass/screen.scss */
+/* line 109, ../sass/screen.scss */
 .gutter.gutter-left > .gutter-top_corner, .gutter.gutter-left > .gutter-repeat {
   margin-left: 11px;
 }
-/* line 102, ../sass/screen.scss */
+/* line 114, ../sass/screen.scss */
 .gutter.gutter-right {
   float: right;
   /* hate the way I've done this */
   margin-right: -9px;
   margin-top: -365px;
 }
-/* line 107, ../sass/screen.scss */
+/* line 119, ../sass/screen.scss */
 .gutter.gutter-right > .gutter-top_corner, .gutter.gutter-right > .gutter-repeat {
   -webkit-transform: scale(-1, 1);
   -moz-transform: scale(-1, 1);
@@ -215,18 +231,18 @@ li {
   -o-transform: scale(-1, 1);
   transform: scale(-1, 1);
 }
-/* line 112, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 .gutter > .gutter-repeat {
   height: 329px;
   background-image: url("../images/gutter-repeat.png");
   background-repeat: repeat;
   background-position: top left;
 }
-/* line 117, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 .gutter.gutter-base {
   background-size: 100%;
   height: 8px;
-  width: 964px;
+  width: 100%;
   position: relative;
   margin: auto;
   -webkit-box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.8);
@@ -234,7 +250,7 @@ li {
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.8);
   border-bottom: 2px solid #000;
 }
-/* line 126, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail {
   background-image: url("../images/header-texture.jpg");
   background-repeat: repeat;
@@ -243,14 +259,14 @@ li {
   height: 100%;
   position: relative;
 }
-/* line 133, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > .gutter-shadow_internal {
   position: absolute;
   height: 100%;
   width: 40px;
   z-index: 1;
 }
-/* line 139, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > .gutter-shadow_internal.shadow-left {
   background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, #000000), color-stop(100%, rgba(0, 0, 0, 0)));
   background-image: -webkit-linear-gradient(left, #000000, rgba(0, 0, 0, 0));
@@ -259,7 +275,7 @@ li {
   background-image: linear-gradient(left, #000000, rgba(0, 0, 0, 0));
   left: 0px;
 }
-/* line 143, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > .gutter-shadow_internal.shadow-right {
   background-image: -webkit-gradient(linear, 100% 50%, 0% 50%, color-stop(0%, #000000), color-stop(100%, rgba(0, 0, 0, 0)));
   background-image: -webkit-linear-gradient(right, #000000, rgba(0, 0, 0, 0));
@@ -268,7 +284,7 @@ li {
   background-image: linear-gradient(right, #000000, rgba(0, 0, 0, 0));
   right: 0px;
 }
-/* line 150, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 .gutter.gutter-base > .gutter-base-detail > hr {
   margin: 0px;
   position: absolute;
@@ -281,63 +297,156 @@ li {
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
-/* line 167, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 footer {
   overflow-y: hidden;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .drop-shadow {
   -webkit-box-shadow: 0 20px 60px 30px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0 20px 60px 30px rgba(0, 0, 0, 0.8);
   box-shadow: 0 20px 60px 30px rgba(0, 0, 0, 0.8);
 }
 
-/* line 175, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
 .drop-shadow-multiple {
   -webkit-box-shadow: rgba(0, 0, 0, 0.4) 0 0 35px 25px, rgba(255, 255, 255, 0.75) 7px 0 7px -6px inset;
   -moz-box-shadow: rgba(0, 0, 0, 0.4) 0 0 35px 25px, rgba(255, 255, 255, 0.75) 7px 0 7px -6px inset;
   box-shadow: rgba(0, 0, 0, 0.4) 0 0 35px 25px, rgba(255, 255, 255, 0.75) 7px 0 7px -6px inset;
 }
 
+/* line 191, ../sass/screen.scss */
+.tab-content {
+  position: relative;
+}
+
+/* line 195, ../sass/screen.scss */
+.repo-listitems {
+  height: 220px;
+  overflow: auto;
+  width: 100%;
+}
+/* line 199, ../sass/screen.scss */
+.repo-listitems > .repo-listitem {
+  border-bottom: 1px solid rgba(128, 128, 128, 0.5);
+  color: gray;
+  font: normal normal 12px Helvetica, Arial, "sans-serif";
+  width: 100%;
+  float: left;
+  min-height: 28px;
+  line-height: 28px;
+}
+/* line 207, ../sass/screen.scss */
+.repo-listitems > .repo-listitem > .repo-listitem_left {
+  float: left;
+  width: 75%;
+}
+/* line 211, ../sass/screen.scss */
+.repo-listitems > .repo-listitem > .repo-listitem_right {
+  float: right;
+  width: 25%;
+  text-align: right;
+}
+
+/* line 220, ../sass/screen.scss */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 /* bootstrap overrides */
-/* line 180, ../sass/screen.scss */
+/* line 225, ../sass/screen.scss */
+form > .control-group {
+  margin-top: 18px;
+  margin-bottom: 12px;
+}
+/* line 230, ../sass/screen.scss */
+form > .control-group ~ .control-group {
+  margin-top: 0px;
+}
+/* line 234, ../sass/screen.scss */
+form > .control-group.btn-group {
+  width: 78%;
+  margin-left: 20%;
+}
+
+/* line 241, ../sass/screen.scss */
+input {
+  border-color: #494949;
+}
+/* line 244, ../sass/screen.scss */
+input.input-xlarge-override.input-xlarge {
+  font: normal normal 12px Helvetica, Arial, "sans-serif";
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
+  border-radius: 1px;
+  width: 75%;
+  margin-bottom: 0px;
+}
+
+/* line 252, ../sass/screen.scss */
 .btn-small {
   margin-left: 12%;
   margin-top: 2%;
   width: 73%;
 }
-/* line 184, ../sass/screen.scss */
-.btn-small.nav-btn {
+/* line 258, ../sass/screen.scss */
+.btn-small.nav-btn, .btn-small.form-btn {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(75%, #d4b765), color-stop(87.5%, rgba(135, 49, 22, 0.5)), color-stop(100%, #d4b765));
   background-image: -webkit-linear-gradient(top, #d4b765 75%, rgba(135, 49, 22, 0.5), #d4b765);
   background-image: -moz-linear-gradient(top, #d4b765 75%, rgba(135, 49, 22, 0.5), #d4b765);
   background-image: -o-linear-gradient(top, #d4b765 75%, rgba(135, 49, 22, 0.5), #d4b765);
   background-image: linear-gradient(top, #d4b765 75%, rgba(135, 49, 22, 0.5), #d4b765);
-  border-color: #b3a5a2;
   font: italic bold 14px Helvetica, Arial, "sans-serif";
-  color: #873116;
-  min-height: 22px;
-  line-height: 22px;
-}
-/* line 193, ../sass/screen.scss */
-.btn-small.nav-btn:hover {
-  opacity: 0.75;
-  background-position: 0 0px;
-}
-
-/* line 200, ../sass/screen.scss */
-.btn.btn-small.nav-btn {
   -webkit-box-shadow: inset 0 0 12px 6px #873116;
   -moz-box-shadow: inset 0 0 12px 6px #873116;
   box-shadow: inset 0 0 12px 6px #873116;
+  min-height: 23px;
+  line-height: 23px;
+  color: #873116;
+}
+/* line 265, ../sass/screen.scss */
+.btn-small.nav-btn:hover, .btn-small.form-btn:hover {
+  opacity: 0.75;
+  background-position: 0 0px;
+}
+/* line 271, ../sass/screen.scss */
+.btn-small.nav-btn {
+  border-color: #b3a5a2;
+}
+/* line 274, ../sass/screen.scss */
+.btn-small.form-btn {
+  margin-top: 0px;
+  float: right;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: inset 0 0 6px 3px #873116;
+  -moz-box-shadow: inset 0 0 6px 3px #873116;
+  box-shadow: inset 0 0 6px 3px #873116;
+  border-color: #873116;
+  font: normal bold 14px Helvetica, Arial, "sans-serif";
+  text-transform: uppercase;
+  width: 88px;
 }
 
-/* line 204, ../sass/screen.scss */
+/* line 292, ../sass/screen.scss */
 .padded {
   padding: 48px 36px;
 }
-/* line 206, ../sass/screen.scss */
+/* line 294, ../sass/screen.scss */
 .padded > p {
   font: normal normal 12px Helvetica, Arial, "sans-serif";
+}
+
+/* line 300, ../sass/screen.scss */
+.controls .control-label {
+  font: normal normal 12px Helvetica, Arial, "sans-serif";
+  float: left;
+  line-height: 30px;
+  width: 20%;
 }
